--- a/src/styles/homeAdmin.css
+++ b/src/styles/homeAdmin.css
@@ -1,7 +1,7 @@
 .header{
     height: 10%;
     width: 100%;
-    background-color: #2F55ED;
+    background-color: #16276E;
     color: aliceblue;
     display: flex;
     align-items: center;
@@ -27,13 +27,15 @@
 }
 
 .aside{
-    height: 94vh;
+    position: absolute;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
     background-color: #16276E;
     color: aliceblue;
-    width: 14%;
-    display: flex;
-    flex-direction: column;
 }
+
+
 
 .divUserAd{
     display: flex;
