--- a/src/styles/homeAdmin.css
+++ b/src/styles/homeAdmin.css
@@ -27,12 +27,19 @@
 }
 
 .aside{
+    position: absolute;
+    overflow: hidden;
     height: 94vh;
     background-color: #16276E;
     color: aliceblue;
     width: 14%;
     display: flex;
     flex-direction: column;
+    transition: width 0.4s;
+}
+
+.aside.open{
+    width: 2.3%;
 }
 
 .divUserAd{
