--- a/src/styles/productList.css
+++ b/src/styles/productList.css
@@ -1,3 +1,9 @@
+
+.container-centered {
+    max-width: 91%;
+    margin: 0 auto; /* Esto centrará el contenido horizontalmente */
+}
+
 .section_our_solution .row {
     align-items: center;
 }
@@ -73,7 +79,7 @@
 
 .solution_cards_box .solution_card:hover .solu_description button {
     background: #fff !important;
-    color: #309df0;
+    color: #309df0 !important;
 }
 
 .solution_card .so_top_icon {}
@@ -105,8 +111,6 @@
     margin-bottom: 1rem;
     font-size: 2.5rem;
 }
-
-.our_solution_content p {}
 
 .hover_color_bubble {
     position: absolute;
@@ -165,6 +169,7 @@
     display: flex;
     flex-direction: column;
     width: 65vw;
+    margin-top: 20px;
 }
 
 .cardsContainer {
