--- a/src/styles/homeAdmin.css
+++ b/src/styles/homeAdmin.css
@@ -1,110 +1,3 @@
-.header{
-    height: 10%;
-    width: 100%;
-    background-color: #16276E;
-    color: aliceblue;
+.app-container{
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.divAux {
-    display: flex;
-    width: 97%;
-    align-items: center;
-    justify-content: flex-end;
-    margin-right: 20px;
-}
-
-.header img{
-    width: 20px;
-    height: 20px;
-    margin-left: 10px;
-}
-
-.body {
-    background-color: red;
-}
-
-.aside{
-    position: absolute;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-    background-color: #16276E;
-    color: aliceblue;
-}
-
-
-
-.divUserAd{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.divBClose{
-    height: 40px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 10px;
-}
-
-.divBClose img{
-    margin-right: 10px;
-    height: 60%;
-    cursor: pointer;
-}
-
-.divLog{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
-    border-bottom: solid 1px aliceblue;
-    font-size: 12px;
-}
-
-.divLog img{
-    width: 64px;
-    height: 64px;
-}
-
-.divList{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -50px;
-}
-
-ol{
-    display: flex;
-    flex-direction:column;
-    align-items: flex-start;
-}
-
-li {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin-left: -30px;
-}
-
-li:hover{
-    border-bottom: solid 1px aliceblue;
-    cursor: pointer;
-    font-weight: bold;
-    transform: scale(1.1);
-}
-
-li img{
-    width: 20px;
-    height: 20px;
-    margin-right: 6px;
 }
