--- a/src/styles/productList.css
+++ b/src/styles/productList.css
@@ -1,7 +1,16 @@
+:root {
+    --primary-color: #309df0;
+    --primary-color-dark: #227fc5;
+    --button-color-hover: #1b6caa;
+    --button-color: #227fc5;
+    --button-color-shadow: #5433FF30;
+    --text-color: white;
+}
 
 .container-centered {
     max-width: 91%;
-    margin: 0 auto; /* Esto centrará el contenido horizontalmente */
+    margin: 0 auto;
+    /* Esto centrará el contenido horizontalmente */
 }
 
 .section_our_solution .row {
@@ -82,8 +91,6 @@
     color: #309df0 !important;
 }
 
-.solution_card .so_top_icon {}
-
 .solution_card .solu_title h3 {
     color: #212121;
     font-size: 1.3rem;
@@ -99,7 +106,7 @@
 .solution_card .solu_description button {
     border: 0;
     border-radius: 15px;
-    background: #2644BD !important;
+    background: var(--button-color-hover) !important;
     color: #fff;
     font-weight: 500;
     font-size: 1rem;
@@ -177,10 +184,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: -10px;
-    grid-auto-rows: minmax(100px, auto); 
+    grid-auto-rows: minmax(100px, auto);
 }
 
-.pagination{
+.pagination {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -188,17 +195,18 @@
     margin-top: 30px;
 }
 
-.pagination button{
+.pagination button {
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 20px;
-    background-color: #2644BD;
+    background-color: var(--button-color-hover);
 }
 
-.pagination button:hover{
-    background-color: #2F55ED !important;
+.pagination button:hover {
+    background-color: var(--button-color) !important;
     transform: scale(1.1);
     cursor: pointer;
+    transition: 0.5s;
 }
 
 @media only screen and (min-width: 768px) {
