--- a/src/styles/sideBar3.css
+++ b/src/styles/sideBar3.css
@@ -1,19 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
-
-:root {
-  --primary-color: #309df0;
-  --primary-color-dark: #227fc5;
-  --button-color-hover: #1b6caa;
-  --button-color: #227fc5;
-  --button-color-shadow: #5433FF30;
-  --text-color: white;
+* {
+  padding: none;
+  margin: none;
+  font-family: "Rockwell";
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Mulish;
+:root {
+  --primary-color: #5ab3f7;
+  --primary-color-dark: #1766a1;
+  --button-color: #14588b;
+  --button-color-hover: #227fc5;
+  --button-color-shadow: #114770;
+  --text-color: white;
 }
 
 .sidebar-top img {
@@ -25,7 +22,7 @@
   top: 0;
   left: 0;
   height: 100vh;
-  background-color: var(--primary-color);
+  background-color: var(--button-color);
   width: 18rem;
   padding: 1.8rem 0.65rem;
   color: var(--text-color);
@@ -62,10 +59,10 @@
   height: 45px;
   display: grid;
   place-items: center;
-  background-color: var(--button-color);
+  background-color: var(--primary-color-dark);
   border-radius: 6px;
   cursor: pointer;
-  box-shadow: 0 3px 10px -3px var(--button-color-shadow);
+  box-shadow: 0 3px 10px -3px var(--button-color-hover);
   right: -3rem;
   transform: translateY(-50%) translateX(-8px);
   opacity: 0;
@@ -98,6 +95,7 @@
 
 .sidebar-links li button {
   width: 100%;
+  border: none;
   padding: 12px;
   color: var(--text-color);
   font-size: 1.25rem;
@@ -118,6 +116,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+button>.iconDropDown{
+  color: white !important;
 }
 
 .icon {
@@ -173,18 +175,17 @@
 .subMenu {
   height: 40px !important;
   border-radius: 0 !important;
-  border-bottom: solid 1px #fff !important;
 }
 
 .subMenu:hover {
-  background-color: var(--button-color-hover) !important;
+  background-color: var(--primary-color-dark) !important;
   border-radius: 10px !important;
   border-bottom: none !important;
 }
 
 .activeSub {
   border-radius: 10px !important;
-  background-color: var(--button-color-hover) !important;
+  background-color: var(--primary-color-dark) !important;
   border-bottom: none !important;
 }
 
