--- a/src/styles/formModal.css
+++ b/src/styles/formModal.css
@@ -1,3 +1,12 @@
+:root {
+    --primary-color: #5ab3f7;
+    --primary-color-dark: #1766a1;
+    --button-color: #14588b;
+    --button-color-hover: #227fc5;
+    --button-color-shadow: #114770;
+    --text-color: white;
+}
+
 /*Efecto*/
 .modalmask {
     position: fixed;
@@ -36,7 +45,7 @@
     margin-top: 100px !important;
     width: 477px;
     height: 551px;
-    background-color: #CDD7FF;
+    background-color: var(--primary-color);
     border-radius: 20px;
 }
 
@@ -62,7 +71,7 @@
 }
 
 .dataInput{
-    width: 100%;
+    width: 110%;
     height: 43px;
     display: flex;
     align-items: center;
@@ -70,6 +79,7 @@
     border-radius: 10px;
     background-color: white;
     margin-top: 10px;
+    padding-right: 30px;
 }
 
 .label {
@@ -82,21 +92,22 @@
 .label p{
     height: 70%;
     padding-top: 2px;
-    padding-right: 20px;
+    padding-right: 10px;
     padding-left: 10px;
     margin-top: 18px;
     color: #16276E;
     border-right: 1px solid #16276E;
 }
 
-.input{
-    margin-left: 20px;
+.input {
+    margin-left: 15px;
 }
 
 .input input{
+    float: left;
+    text-align: left;
     border: none;
     outline: none;
-    background-color: rgba(255, 255, 255, 0);
 }
 
 .footerContent{
@@ -115,4 +126,7 @@
     margin-left: 30px;
     margin-right: 30px;
     background-color: #16276E;
+    border: 2px solid var(--button-color-hover);
+    color: white;
+    outline: none;
 }
