--- a/src/styles/Tabs.css
+++ b/src/styles/Tabs.css
@@ -7,16 +7,21 @@
     --text-color: white;
 }
 
-.contentTabs{
+.contentTabs {
     margin-top: 20px;
-    color: white;
+    color: var(--button-color);
 }
 
 .main {
     padding: 50px;
     margin: 0 auto;
-    background-color: var(--primary-color);
+    background-color: white;
     border-radius: 10px;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.79);
+    -webkit-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.79);
+    -moz-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.79);
 }
 
 .contentTabs section {
@@ -61,12 +66,14 @@
     transform: scaleX(1.1);
     transition: 0.2s;
     cursor: pointer;
+    color: aliceblue;
 }
 
 .main input:checked+label {
     background-color: var(--button-color-hover);
     border: 1px solid var(--button-color-hover);
     border-bottom: 1px solid var(--button-color-hover);
+    color: aliceblue;
 }
 
 .chart {
@@ -108,7 +115,7 @@
     .chart {
         max-width: 90%;
     }
-    
+
 }
 
 @media screen and (max-width: 400px) {
@@ -122,8 +129,8 @@
 }
 
 .container input[type="date"] {
-    background-color: var(--primary-color);
-    color: #ffffff;
+    background-color: transparent;
+    color: var(--button-color);
     font-size: 18px;
     border: none;
     outline: none;
@@ -134,14 +141,14 @@
     align-items: flex-start;
 }
 
-.datas> button {
+.datas>button {
     background-color: var(--button-color);
     padding: 5px 10px 5px 10px;
     border: none;
     outline: none;
 }
 
-.datas> button:hover {
+.datas>button:hover {
     background-color: var(--button-color-hover);
     transform: scale(1.1);
     transition: .1s;
