--- a/src/styles/card2.css
+++ b/src/styles/card2.css
@@ -11,7 +11,7 @@
 	--c-fair-pink: #9fcbec;
 	--c-apricot: #5ab4f8;
 	--c-coffee: #114770;
-	--c-del-rio: #14588b;
+	--c-del-rio: var(--c-ash);
 
 
 	--c-java: #114770;
@@ -21,6 +21,13 @@
 	--c-cold-purple: #a69fd6;
 	--c-indigo: #227fc5;
 	--c-governor: #14588b;
+
+	--primary-color: #5ab3f7;
+	--primary-color-dark: #1766a1;
+	--button-color: #14588b;
+	--button-color-hover: #227fc5;
+	--button-color-shadow: #114770;
+	--text-color: white;
 }
 
 body {
@@ -28,15 +35,16 @@ body {
 }
 
 .card {
+	margin-bottom: 20px;
 	border-radius: 16px;
 	box-shadow: 0 30px 30px -25px rgba(#4133B7, .25);
 	max-width: 300px;
+	background-color: #5ab3f754 !important;
 }
 
 .plan {
 	width: 300px;
-	padding: 10px;
-	background-color: var(--c-white);
+	padding: 5px;
 	color: var(--c-del-rio);
 	margin-top: 5px;
 
@@ -52,7 +60,7 @@ body {
 	.inner {
 		padding: 20px;
 		padding-top: 40px;
-		background-color: var(--c-fair-pink);
+		background-color: white;
 		border-radius: 12px;
 		position: relative;
 		overflow: hidden;
@@ -70,7 +78,7 @@ body {
 		padding: .625em .75em;
 		font-size: 1.25rem;
 		font-weight: 600;
-		color: var(--c-coffee);
+		color: white;
 
 		small {
 			color: var(--c-del-rio);
@@ -153,7 +161,9 @@ body {
 	&:hover,
 	&:focus {
 		background-color: var(--c-governor);
-	};
+	}
+
+	;
 	margin: 0;
 	margin-right: 10px;
 	align-self: flex-end !important;
